package com.challenge.models.enums;

/**
 * Direction of a game
 *  @see #CLOCKWISE
 *  @see #COUNTERCLOCKWISE
 */
public enum Direction {
    /**
     * Default direction of the game, clockwise
     */
    CLOCKWISE,

    /**
     * Reversed direction of the game after played special card
     */
    COUNTERCLOCKWISE,
}
